# foundry-core

./: Cargo.toml  Makefile  README.md  deny.toml
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: release.sh
.github/workflows/: ci.yml
crates/block-explorers/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  release.toml
crates/block-explorers/src/: account.rs  lib.rs  verify.rs
crates/block-explorers/tests/it/: account.rs  blocks.rs  contract.rs  gas.rs  main.rs  transaction.rs  verify.rs  version.rs
crates/compilers/crates/artifacts/solc/src/: lib.rs
crates/compilers/crates/compilers/src/compile/: project.rs
crates/compilers/crates/compilers/src/compilers/: mod.rs  multi.rs
crates/compilers/crates/compilers/src/compilers/fe/: input.rs  mod.rs
crates/explorers/: README.md
crates/fork-db/: Cargo.toml
crates/wallets/: Cargo.toml
crates/wallets/src/: lib.rs
crates/wallets/src/wallet_browser/: handlers.rs  mod.rs  queue.rs  router.rs  server.rs  signer.rs  state.rs  types.rs
crates/wallets/src/wallet_browser/app/assets/: main.js  styles.css
