[package]
name = "foundry-fork-db"
description = "Fork database used by Foundry"
version = "0.26.0"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
zstd = ["dep:zstd"]

[dependencies]
alloy-chains = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true, features = ["map"] }
alloy-provider = { version = "2.0.4", default-features = false }
alloy-rpc-types = { version = "2.0.4", features = ["eth"] }

eyre.workspace = true
futures = "0.3.32"

parking_lot = "0.12.5"

revm = { version = "40.0.3", features = ["std", "serde"] }

serde.workspace = true
serde_json.workspace = true

thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true

url = "2.5.8"
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
alloy-consensus.workspace = true
alloy-rpc-client = "2.0.4"
tempfile.workspace = true
tiny_http = "0.12.0"
